[package]
name = "citybuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
alsa = "0.9.1"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy-trait-query = "0.16.0"
iyes_perf_ui = "0.5.0"
noise = "0.9.0"
rand = "0.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
